update ruff version

--- a/scripts/client/bioassay-crud.ipynb
+++ b/scripts/client/bioassay-crud.ipynb
@@ -51,8 +51,8 @@
     }
    ],
    "source": [
-    "client = HawcClient('https://hawcproject.org')\n",
-    "client.authenticate(email='admin@hawcproject.org', password=getpass())\n",
+    "client = HawcClient(\"https://hawcproject.org\")\n",
+    "client.authenticate(email=\"admin@hawcproject.org\", password=getpass())\n",
     "assessment_id = 100500210"
    ]
   },
@@ -98,10 +98,7 @@
     "hero_id = 4322522\n",
     "\n",
     "response = client.lit.import_hero(\n",
-    "    assessment_id,\n",
-    "    title=\"import title\",\n",
-    "    description=\"import description\",\n",
-    "    ids=[hero_id]\n",
+    "    assessment_id, title=\"import title\", description=\"import description\", ids=[hero_id]\n",
     ")\n",
     "response"
    ]
@@ -124,8 +121,8 @@
    ],
    "source": [
     "# get HAWC reference ID mapping\n",
-    "references=client.lit.reference_ids(assessment_id)\n",
-    "hawc_reference_id = int(references.query(f'`hero_id` == {hero_id}').reference_id.iloc[0])\n",
+    "references = client.lit.reference_ids(assessment_id)\n",
+    "hawc_reference_id = int(references.query(f\"`hero_id` == {hero_id}\").reference_id.iloc[0])\n",
     "hawc_reference_id"
    ]
   },
@@ -253,7 +250,7 @@
     }
    ],
    "source": [
-    "pd.Series(metadata['study']['coi_reported'], name='coi_item').to_frame().reset_index()"
+    "pd.Series(metadata[\"study\"][\"coi_reported\"], name=\"coi_item\").to_frame().reset_index()"
    ]
   },
   {
@@ -291,7 +288,7 @@
     }
    ],
    "source": [
-    "metadata['experiment']['type']"
+    "metadata[\"experiment\"][\"type\"]"
    ]
   },
   {
@@ -355,10 +352,10 @@
     }
    ],
    "source": [
-    "species = pd.DataFrame(data=metadata['animal_group']['species']).set_index('id')\n",
-    "strain = pd.DataFrame(data=metadata['animal_group']['strains']).set_index('id')\n",
+    "species = pd.DataFrame(data=metadata[\"animal_group\"][\"species\"]).set_index(\"id\")\n",
+    "strain = pd.DataFrame(data=metadata[\"animal_group\"][\"strains\"]).set_index(\"id\")\n",
     "\n",
-    "species.query('name.str.contains(\"Mouse\")', engine='python')"
+    "species.query('name.str.contains(\"Mouse\")', engine=\"python\")"
    ]
   },
   {
@@ -539,7 +536,7 @@
     }
    ],
    "source": [
-    "strain.query('species_id==2').head(20)"
+    "strain.query(\"species_id==2\").head(20)"
    ]
   },
   {
@@ -578,7 +575,7 @@
     "    in_vitro=False,\n",
     "    coi_reported=3,\n",
     "    coi_details=\"\",\n",
-    "    funding_source='Acme industries',\n",
+    "    funding_source=\"Acme industries\",\n",
     "    study_identifier=\"4322522\",\n",
     "    contact_author=False,\n",
     "    ask_author=\"\",\n",
@@ -586,11 +583,8 @@
     "    summary=\"\",\n",
     "    editable=True,\n",
     ")\n",
-    "study = client.study.create(\n",
-    "    reference_id=hawc_reference_id,\n",
-    "    data=data    \n",
-    ")\n",
-    "study['id']"
+    "study = client.study.create(reference_id=hawc_reference_id, data=data)\n",
+    "study[\"id\"]"
    ]
   },
   {
@@ -624,8 +618,8 @@
    ],
    "source": [
     "data = dict(\n",
-    "    study_id=study['id'],     \n",
-    "    name=\"30 day oral\",     \n",
+    "    study_id=study[\"id\"],\n",
+    "    name=\"30 day oral\",\n",
     "    type=\"St\",\n",
     "    has_multiple_generations=False,\n",
     "    chemical=\"2,3,7,8-Tetrachlorodibenzo-P-dioxin\",\n",
@@ -637,10 +631,10 @@
     "    purity=99.9,\n",
     "    vehicle=\"DMSO\",\n",
     "    guideline_compliance=\"not reported\",\n",
-    "    description=\"Details here.\"\n",
+    "    description=\"Details here.\",\n",
     ")\n",
     "experiment = client.animal.create_experiment(data)\n",
-    "experiment['id']"
+    "experiment[\"id\"]"
    ]
   },
   {
@@ -672,7 +666,7 @@
    ],
    "source": [
     "data = dict(\n",
-    "    experiment_id=experiment['id'],     \n",
+    "    experiment_id=experiment[\"id\"],\n",
     "    name=\"Female C57BL/6 Mice\",\n",
     "    species=2,\n",
     "    strain=6,\n",
@@ -684,7 +678,7 @@
     "    comments=\"Detailed comments here\",\n",
     "    diet=\"...\",\n",
     "    dosing_regime=dict(\n",
-    "        route_of_exposure= \"OR\",\n",
+    "        route_of_exposure=\"OR\",\n",
     "        duration_exposure=30,\n",
     "        duration_exposure_text=\"30 days\",\n",
     "        duration_observation=180,\n",
@@ -692,7 +686,7 @@
     "        positive_control=True,\n",
     "        negative_control=\"VT\",\n",
     "        description=\"...\",\n",
-    "        doses = [\n",
+    "        doses=[\n",
     "            {\"dose_group_id\": 0, \"dose\": 0, \"dose_units_id\": 1},\n",
     "            {\"dose_group_id\": 1, \"dose\": 50, \"dose_units_id\": 1},\n",
     "            {\"dose_group_id\": 2, \"dose\": 100, \"dose_units_id\": 1},\n",
@@ -700,11 +694,11 @@
     "            {\"dose_group_id\": 1, \"dose\": 3.7, \"dose_units_id\": 2},\n",
     "            {\"dose_group_id\": 2, \"dose\": 11.4, \"dose_units_id\": 2},\n",
     "        ],\n",
-    "    )\n",
+    "    ),\n",
     ")\n",
     "animal_group1 = client.animal.create_animal_group(data)\n",
-    "animal_group_id = animal_group1['id']\n",
-    "dosing_regime_id = animal_group1['dosing_regime']['id']\n",
+    "animal_group_id = animal_group1[\"id\"]\n",
+    "dosing_regime_id = animal_group1[\"dosing_regime\"][\"id\"]\n",
     "animal_group_id"
    ]
   },
@@ -733,7 +727,7 @@
    ],
    "source": [
     "data = dict(\n",
-    "    experiment_id=experiment['id'],     \n",
+    "    experiment_id=experiment[\"id\"],\n",
     "    name=\"F1 Male/Female C57BL/6 Mice\",\n",
     "    species=2,\n",
     "    strain=6,\n",
@@ -749,7 +743,7 @@
     "    diet=\"...\",\n",
     ")\n",
     "animal_group2 = client.animal.create_animal_group(data)\n",
-    "animal_group2['id']"
+    "animal_group2[\"id\"]"
    ]
   },
   {
@@ -780,11 +774,11 @@
    "source": [
     "data = dict(\n",
     "    animal_group_id=animal_group_id,\n",
-    "    name='Relative liver weight', # or name_term:int from controlled vocabulary\n",
-    "    system='Hepatic', # or system_term:int from controlled vocabulary\n",
-    "    organ=\"Liver\", # or organ_term:int from controlled vocabulary\n",
-    "    effect=\"Organ weight\", # or effect_term:int from controlled vocabulary\n",
-    "    effect_subtype=\"Relative weight\", # or effect_subtype_term:int from controlled vocabulary\n",
+    "    name=\"Relative liver weight\",  # or name_term:int from controlled vocabulary\n",
+    "    system=\"Hepatic\",  # or system_term:int from controlled vocabulary\n",
+    "    organ=\"Liver\",  # or organ_term:int from controlled vocabulary\n",
+    "    effect=\"Organ weight\",  # or effect_term:int from controlled vocabulary\n",
+    "    effect_subtype=\"Relative weight\",  # or effect_subtype_term:int from controlled vocabulary\n",
     "    litter_effects=\"NA\",\n",
     "    litter_effect_notes=\"\",\n",
     "    observation_time=104,\n",
@@ -837,7 +831,7 @@
     "            variance=0.63,\n",
     "            significant=True,\n",
     "            significance_level=0.035,\n",
-    "        )\n",
+    "        ),\n",
     "    ],\n",
     ")\n",
     "endpoint = client.animal.create_endpoint(data)\n",
@@ -870,8 +864,8 @@
    "source": [
     "data = dict(\n",
     "    animal_group_id=animal_group_id,\n",
-    "    name='Relative liver weight',\n",
-    "    system='Hepatic',\n",
+    "    name=\"Relative liver weight\",\n",
+    "    system=\"Hepatic\",\n",
     "    organ=\"Liver\",\n",
     "    effect=\"Organ weight\",\n",
     "    effect_subtype=\"Relative weight\",\n",
@@ -891,7 +885,7 @@
     "    diagnostic=\"...\",\n",
     "    power_notes=\"...\",\n",
     "    results_notes=\"...\",\n",
-    "    endpoint_notes=\"...\",    \n",
+    "    endpoint_notes=\"...\",\n",
     ")\n",
     "endpoint = client.animal.create_endpoint(data)\n",
     "endpoint[\"id\"]"
