--- a/scripts/client/bulk_rob_copy.ipynb
+++ b/scripts/client/bulk_rob_copy.ipynb
@@ -7,10 +7,12 @@
    "outputs": [],
    "source": [
     "from getpass import getpass\n",
-    "# Import our Python client\n",
-    "from hawc_client import HawcClient\n",
+    "\n",
     "# We will need pandas for DataFrames and getpass for login\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "# Import our Python client\n",
+    "from hawc_client import HawcClient"
    ]
   },
   {
@@ -79,9 +81,13 @@
    "outputs": [],
    "source": [
     "# Get studies for src and dst (objects are lists of dicts)\n",
-    "src_studies = client.session.get(f\"{domain}/study/api/study/?assessment_id={src_assessment_id}\").json()\n",
+    "src_studies = client.session.get(\n",
+    "    f\"{domain}/study/api/study/?assessment_id={src_assessment_id}\"\n",
+    ").json()\n",
     "src_study_ids = [study[\"id\"] for study in src_studies]\n",
-    "dst_studies = client.session.get(f\"{domain}/study/api/study/?assessment_id={dst_assessment_id}\").json()\n",
+    "dst_studies = client.session.get(\n",
+    "    f\"{domain}/study/api/study/?assessment_id={dst_assessment_id}\"\n",
+    ").json()\n",
     "dst_study_ids = [study[\"id\"] for study in dst_studies]\n",
     "\n",
     "# Get references for src and dst (objects are dataframes)\n",
@@ -89,8 +95,12 @@
     "dst_refs = client.lit.reference_ids(dst_assessment_id)\n",
     "\n",
     "# Get matching studies for src and dst (objects are dataframes)\n",
-    "src_hero_studies = src_refs.loc[(src_refs[\"reference_id\"].isin(src_study_ids)) & (src_refs[\"hero_id\"].isin(hero_ids))]\n",
-    "dst_hero_studies = dst_refs.loc[(dst_refs[\"reference_id\"].isin(dst_study_ids)) & (dst_refs[\"hero_id\"].isin(hero_ids))]"
+    "src_hero_studies = src_refs.loc[\n",
+    "    (src_refs[\"reference_id\"].isin(src_study_ids)) & (src_refs[\"hero_id\"].isin(hero_ids))\n",
+    "]\n",
+    "dst_hero_studies = dst_refs.loc[\n",
+    "    (dst_refs[\"reference_id\"].isin(dst_study_ids)) & (dst_refs[\"hero_id\"].isin(hero_ids))\n",
+    "]"
    ]
   },
   {
@@ -111,8 +121,12 @@
     "# Any missing studies?\n",
     "src_missing_hero = set(hero_ids) - set(src_hero_studies[\"hero_id\"].to_list())\n",
     "dst_missing_hero = set(hero_ids) - set(dst_hero_studies[\"hero_id\"].to_list())\n",
-    "print(f\"Missing source studies for the following HERO IDs: {', '.join([str(id) for id in src_missing_hero])}\")\n",
-    "print(f\"Missing destination studies for the following HERO IDs: {', '.join([str(id) for id in dst_missing_hero])}\")"
+    "print(\n",
+    "    f\"Missing source studies for the following HERO IDs: {', '.join([str(id) for id in src_missing_hero])}\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"Missing destination studies for the following HERO IDs: {', '.join([str(id) for id in dst_missing_hero])}\"\n",
+    ")"
    ]
   },
   {
@@ -129,10 +143,17 @@
    "outputs": [],
    "source": [
     "# Create the study mapping\n",
-    "src_hero_studies = src_hero_studies.rename(columns={\"reference_id\":\"src_id\"})[[\"src_id\",\"hero_id\"]]\n",
-    "dst_hero_studies = dst_hero_studies.rename(columns={\"reference_id\":\"dst_id\"})[[\"dst_id\",\"hero_id\"]]\n",
-    "hero_studies = src_hero_studies.merge(dst_hero_studies,on=\"hero_id\")\n",
-    "src_to_dst_study = {int(src_id):int(dst_id) for src_id,dst_id in hero_studies[[\"src_id\",\"dst_id\"]].to_records(index=False)}"
+    "src_hero_studies = src_hero_studies.rename(columns={\"reference_id\": \"src_id\"})[\n",
+    "    [\"src_id\", \"hero_id\"]\n",
+    "]\n",
+    "dst_hero_studies = dst_hero_studies.rename(columns={\"reference_id\": \"dst_id\"})[\n",
+    "    [\"dst_id\", \"hero_id\"]\n",
+    "]\n",
+    "hero_studies = src_hero_studies.merge(dst_hero_studies, on=\"hero_id\")\n",
+    "src_to_dst_study = {\n",
+    "    int(src_id): int(dst_id)\n",
+    "    for src_id, dst_id in hero_studies[[\"src_id\", \"dst_id\"]].to_records(index=False)\n",
+    "}"
    ]
   },
   {
@@ -148,8 +169,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "src_metrics = client.session.get(f\"{domain}/rob/api/metric/?assessment_id={src_assessment_id}\").json()\n",
-    "dst_metrics = client.session.get(f\"{domain}/rob/api/metric/?assessment_id={dst_assessment_id}\").json()\n"
+    "src_metrics = client.session.get(\n",
+    "    f\"{domain}/rob/api/metric/?assessment_id={src_assessment_id}\"\n",
+    ").json()\n",
+    "dst_metrics = client.session.get(\n",
+    "    f\"{domain}/rob/api/metric/?assessment_id={dst_assessment_id}\"\n",
+    ").json()"
    ]
   },
   {
@@ -159,9 +184,12 @@
    "outputs": [],
    "source": [
     "# Try to map src to dst metric by name\n",
-    "src_metric_name_to_id = {metric[\"name\"]:metric[\"id\"] for metric in src_metrics}\n",
-    "dst_metric_name_to_id = {metric[\"name\"]:metric[\"id\"] for metric in dst_metrics}\n",
-    "src_to_dst_metric = {src_metric_name_to_id[name]:dst_metric_name_to_id[name] for name in src_metric_name_to_id.keys()}"
+    "src_metric_name_to_id = {metric[\"name\"]: metric[\"id\"] for metric in src_metrics}\n",
+    "dst_metric_name_to_id = {metric[\"name\"]: metric[\"id\"] for metric in dst_metrics}\n",
+    "src_to_dst_metric = {\n",
+    "    src_metric_name_to_id[name]: dst_metric_name_to_id[name]\n",
+    "    for name in src_metric_name_to_id.keys()\n",
+    "}"
    ]
   },
   {
@@ -1060,13 +1088,13 @@
    ],
    "source": [
     "client.riskofbias.bulk_rob_copy(\n",
-    "    src_assessment_id = src_assessment_id,\n",
-    "    dst_assessment_id = dst_assessment_id,\n",
-    "    dst_author_id = 1,\n",
-    "    src_dst_study_ids = list(src_to_dst_study.items()),\n",
-    "    src_dst_metric_ids = list(src_to_dst_metric.items()),\n",
-    "    copy_mode = 2,\n",
-    "    author_mode =2\n",
+    "    src_assessment_id=src_assessment_id,\n",
+    "    dst_assessment_id=dst_assessment_id,\n",
+    "    dst_author_id=1,\n",
+    "    src_dst_study_ids=list(src_to_dst_study.items()),\n",
+    "    src_dst_metric_ids=list(src_to_dst_metric.items()),\n",
+    "    copy_mode=2,\n",
+    "    author_mode=2,\n",
     ")"
    ]
   },
