--- a/scripts/client/lit-crud-references.ipynb
+++ b/scripts/client/lit-crud-references.ipynb
@@ -24,6 +24,7 @@
    "outputs": [],
    "source": [
     "from getpass import getpass\n",
+    "\n",
     "from hawc_client import HawcClient"
    ]
   },
@@ -48,8 +49,8 @@
     }
    ],
    "source": [
-    "client = HawcClient('https://hawcproject.org')\n",
-    "client.authenticate(email='admin@hawcproject.org', password=getpass())\n",
+    "client = HawcClient(\"https://hawcproject.org\")\n",
+    "client.authenticate(email=\"admin@hawcproject.org\", password=getpass())\n",
     "assessment_id = 100500159"
    ]
   },
@@ -69,10 +70,7 @@
     "hero_id = 1037843\n",
     "\n",
     "response = client.lit.import_hero(\n",
-    "    assessment_id,\n",
-    "    title=\"my import\",\n",
-    "    description=\"import description\",\n",
-    "    ids=[hero_id]\n",
+    "    assessment_id, title=\"my import\", description=\"import description\", ids=[hero_id]\n",
     ")"
    ]
   },
@@ -101,8 +99,8 @@
    ],
    "source": [
     "# get HAWC reference ID mapping\n",
-    "references=client.lit.reference_ids(assessment_id)\n",
-    "reference_id = int(references.query(f'`hero_id` == {hero_id}').reference_id.iloc[0])\n",
+    "references = client.lit.reference_ids(assessment_id)\n",
+    "reference_id = int(references.query(f\"`hero_id` == {hero_id}\").reference_id.iloc[0])\n",
     "reference_id"
    ]
   },
@@ -179,14 +177,14 @@
    ],
    "source": [
     "response = client.lit.update_reference(\n",
-    "    reference_id,    \n",
+    "    reference_id,\n",
     "    title=\"new title\",\n",
     "    authors_short=\"new authors short\",\n",
     "    authors=\"new authors long\",\n",
     "    year=2020,\n",
     "    journal=\"journal\",\n",
     "    abstract=\"abstract\",\n",
-    "    full_text_url=\"https://google.com\", \n",
+    "    full_text_url=\"https://google.com\",\n",
     ")\n",
     "response"
    ]
@@ -321,10 +319,7 @@
     }
    ],
    "source": [
-    "response = client.lit.update_reference(\n",
-    "    reference_id,\n",
-    "    tags=tags.id.sample(3, replace=False).tolist()\n",
-    ")\n",
+    "response = client.lit.update_reference(reference_id, tags=tags.id.sample(3, replace=False).tolist())\n",
     "response"
    ]
   },
@@ -353,7 +348,7 @@
    ],
    "source": [
     "ref_tags = client.lit.reference_tags(assessment_id)\n",
-    "ref_tags.query(f'reference_id == {reference_id}').tag_id.to_list()"
+    "ref_tags.query(f\"reference_id == {reference_id}\").tag_id.to_list()"
    ]
   },
   {
@@ -437,8 +432,8 @@
    ],
    "source": [
     "new_hero = 1037655\n",
-    "replace=[[reference_id,new_hero]]\n",
-    "client.lit.replace_hero(assessment_id,replace)\n",
+    "replace = [[reference_id, new_hero]]\n",
+    "client.lit.replace_hero(assessment_id, replace)\n",
     "client.lit.reference(reference_id)"
    ]
   },
