--- a/scripts/client/lit-tagging-references.ipynb
+++ b/scripts/client/lit-tagging-references.ipynb
@@ -23,8 +23,9 @@
    "source": [
     "from getpass import getpass\n",
     "\n",
-    "from hawc_client import HawcClient\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from hawc_client import HawcClient"
    ]
   },
   {
@@ -48,8 +49,8 @@
     }
    ],
    "source": [
-    "client = HawcClient('https://hawcproject.org')\n",
-    "client.authenticate(email='admin@hawcproject.org', password=getpass())\n",
+    "client = HawcClient(\"https://hawcproject.org\")\n",
+    "client.authenticate(email=\"admin@hawcproject.org\", password=getpass())\n",
     "assessment_id = 100500210"
    ]
   },
@@ -98,7 +99,7 @@
     "    assessment_id,\n",
     "    title=\"reference import\",\n",
     "    description=\"description of what was imported ...\",\n",
-    "    ids=[1037869, 1040933, 1054799]\n",
+    "    ids=[1037869, 1040933, 1054799],\n",
     ")\n",
     "response"
    ]
@@ -481,7 +482,7 @@
    ],
    "source": [
     "ref_tags_backup = client.lit.reference_tags(assessment_id)\n",
-    "ref_tags_backup.to_csv('~/Desktop/ref-tags-backup.csv', index=False)\n",
+    "ref_tags_backup.to_csv(\"~/Desktop/ref-tags-backup.csv\", index=False)\n",
     "ref_tags_backup"
    ]
   },
@@ -547,10 +548,9 @@
     }
    ],
    "source": [
-    "new_tags_df = pd.DataFrame(data=dict(\n",
-    "    reference_id=[references_df.iloc[0][\"HAWC ID\"]],\n",
-    "    tag_id=[tags_df.iloc[0].id]\n",
-    "))\n",
+    "new_tags_df = pd.DataFrame(\n",
+    "    data=dict(reference_id=[references_df.iloc[0][\"HAWC ID\"]], tag_id=[tags_df.iloc[0].id])\n",
+    ")\n",
     "new_tags_df.head()"
    ]
   },
@@ -612,7 +612,7 @@
     }
    ],
    "source": [
-    "result = client.lit.import_reference_tags(assessment_id, new_tags_df.to_csv(index=False), 'append')\n",
+    "result = client.lit.import_reference_tags(assessment_id, new_tags_df.to_csv(index=False), \"append\")\n",
     "result.head()"
    ]
   },
@@ -723,10 +723,12 @@
    ],
    "source": [
     "# sample 10 random reference/tags w/ replacement\n",
-    "new_tags_df = pd.DataFrame(data=dict(\n",
-    "    reference_id=references_df['HAWC ID'].sample(10, replace=True).values, \n",
-    "    tag_id=tags_df['id'].sample(10, replace=True).values,\n",
-    ")).drop_duplicates()\n",
+    "new_tags_df = pd.DataFrame(\n",
+    "    data=dict(\n",
+    "        reference_id=references_df[\"HAWC ID\"].sample(10, replace=True).values,\n",
+    "        tag_id=tags_df[\"id\"].sample(10, replace=True).values,\n",
+    "    )\n",
+    ").drop_duplicates()\n",
     "new_tags_df.head(10)"
    ]
   },
@@ -836,7 +838,7 @@
     }
    ],
    "source": [
-    "result = client.lit.import_reference_tags(assessment_id, new_tags_df.to_csv(index=False), 'replace')\n",
+    "result = client.lit.import_reference_tags(assessment_id, new_tags_df.to_csv(index=False), \"replace\")\n",
     "result.head(10)"
    ]
   },
