--- a/scripts/client/tag-import-from-excel.ipynb
+++ b/scripts/client/tag-import-from-excel.ipynb
@@ -7,10 +7,12 @@
    "outputs": [],
    "source": [
     "# Import our Python client\n",
-    "from hawc_client import HawcClient\n",
+    "import getpass\n",
+    "\n",
     "# We will need pandas for DataFrames and getpass for login\n",
     "import pandas as pd\n",
-    "import getpass"
+    "\n",
+    "from hawc_client import HawcClient"
    ]
   },
   {
@@ -35,7 +37,7 @@
     "\n",
     "# This is our client instance, which we will be using to access HAWC\n",
     "client = HawcClient(domain)\n",
-    "client.authenticate(username,password)\n",
+    "client.authenticate(username, password)\n",
     "\n",
     "print(\"Authentication successful\")"
    ]
@@ -66,7 +68,7 @@
     "if tag_column not in excel_df.columns:\n",
     "    raise Exception(f\"Column '{tag_column}' not in Excel sheet\")\n",
     "print(\"Excel file read\")\n",
-    "print(excel_df[[hero_column,tag_column]])"
+    "print(excel_df[[hero_column, tag_column]])"
    ]
   },
   {
@@ -108,7 +110,7 @@
    "source": [
     "# Import the references into HAWC\n",
     "print(\"Importing HERO IDs...\")\n",
-    "client.lit.import_hero(assessment_id,title,description,hero_ids)"
+    "client.lit.import_hero(assessment_id, title, description, hero_ids)"
    ]
   },
   {
@@ -153,7 +155,7 @@
     "# Get and print tags from assessment\n",
     "assessment_tags = client.lit.tags(assessment_id)\n",
     "print(\"Tags in HAWC:\")\n",
-    "print(assessment_tags[[\"id\",\"nested_name\"]])"
+    "print(assessment_tags[[\"id\", \"nested_name\"]])"
    ]
   },
   {
@@ -183,7 +185,9 @@
     "        continue\n",
     "    tag_id = int(value)\n",
     "    tag_id_mapping[excel_tag] = tag_id\n",
-    "    tag_name_mapping[excel_tag] = assessment_tags[assessment_tags['id']==tag_id].iloc[0]['nested_name']\n",
+    "    tag_name_mapping[excel_tag] = assessment_tags[assessment_tags[\"id\"] == tag_id].iloc[0][\n",
+    "        \"nested_name\"\n",
+    "    ]\n",
     "    print(f\"'{excel_tag}' mapped to '{tag_name_mapping[excel_tag]}'\")"
    ]
   },
@@ -201,7 +205,7 @@
    "outputs": [],
    "source": [
     "# Prints the mapping of excel tags to HAWC tags that will be used during import\n",
-    "tag_mapping_df = pd.DataFrame(list(tag_name_mapping.items()),columns=[\"Excel Tag\", \"HAWC Tag\"])\n",
+    "tag_mapping_df = pd.DataFrame(list(tag_name_mapping.items()), columns=[\"Excel Tag\", \"HAWC Tag\"])\n",
     "tag_mapping_df"
    ]
   },
@@ -221,7 +225,11 @@
     "# Prepare the excel dataframe for import\n",
     "hero_tag_df = excel_df.copy()\n",
     "hero_tag_df[tag_column] = hero_tag_df[tag_column].map(tag_id_mapping)\n",
-    "hero_tag_df = hero_tag_df[[hero_column,tag_column]].rename(columns={hero_column:'hero_id',tag_column:'tag_id'}).dropna()"
+    "hero_tag_df = (\n",
+    "    hero_tag_df[[hero_column, tag_column]]\n",
+    "    .rename(columns={hero_column: \"hero_id\", tag_column: \"tag_id\"})\n",
+    "    .dropna()\n",
+    ")"
    ]
   },
   {
@@ -233,7 +241,9 @@
     "# Export references ids and corresponding HERO ids for given assessment\n",
     "ref_to_hero = client.lit.reference_ids(assessment_id)\n",
     "# Create dataframe that has HAWC reference ids with corresponding tag ids\n",
-    "ref_tag_df = ref_to_hero.merge(hero_tag_df, on=\"hero_id\")[['reference_id','tag_id']].drop_duplicates()"
+    "ref_tag_df = ref_to_hero.merge(hero_tag_df, on=\"hero_id\")[\n",
+    "    [\"reference_id\", \"tag_id\"]\n",
+    "].drop_duplicates()"
    ]
   },
   {
@@ -244,7 +254,9 @@
    "source": [
     "# Import the tags\n",
     "# The operation can be either \"append\" or \"replace\"\n",
-    "client.lit.import_reference_tags(assessment_id,csv=ref_tag_df.to_csv(index=False),operation=\"append\")"
+    "client.lit.import_reference_tags(\n",
+    "    assessment_id, csv=ref_tag_df.to_csv(index=False), operation=\"append\"\n",
+    ")"
    ]
   },
   {
