--- a/scripts/client/rob-config.ipynb
+++ b/scripts/client/rob-config.ipynb
@@ -20,8 +20,8 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "from pathlib import Path\n",
     "from getpass import getpass\n",
+    "from pathlib import Path\n",
     "\n",
     "from hawc_client import HawcClient"
    ]
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "assessment_id = 12345\n",
-    "export_location = Path('example.json')"
+    "export_location = Path(\"example.json\")"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "source": [
     "url = f\"{client.session.root_url}/rob/api/assessment/{assessment_id}/settings/\"\n",
     "settings = client.session.get(url).json()\n",
-    "domains = sorted(settings['domains'], key=lambda d: d['sort_order'])"
+    "domains = sorted(settings[\"domains\"], key=lambda d: d[\"sort_order\"])"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "source": [
     "url = f\"{client.session.root_url}/rob/api/metric/?assessment_id={assessment_id}\"\n",
     "data = client.session.get(url).json()\n",
-    "metrics = sorted(data, key=lambda d: d['sort_order'])"
+    "metrics = sorted(data, key=lambda d: d[\"sort_order\"])"
    ]
   },
   {
@@ -103,12 +103,12 @@
     "data = {\n",
     "    \"help_text\": settings[\"rob_settings\"][\"help_text\"],\n",
     "    \"domains\": [\n",
-    "        {            \n",
+    "        {\n",
     "            \"name\": domain[\"name\"],\n",
     "            \"description\": domain[\"description\"],\n",
     "            \"is_overall_confidence\": domain[\"is_overall_confidence\"],\n",
     "            \"metrics\": [\n",
-    "                {                    \n",
+    "                {\n",
     "                    # \"key\": metric[\"key\"],\n",
     "                    \"key\": -1,\n",
     "                    \"name\": metric[\"name\"],\n",
@@ -120,10 +120,13 @@
     "                    \"required_invitro\": metric[\"required_invitro\"],\n",
     "                    \"hide_description\": metric[\"hide_description\"],\n",
     "                    \"use_short_name\": metric[\"use_short_name\"],\n",
-    "                } for metric in metrics if metric['domain'] == domain['id']\n",
-    "            ]            \n",
-    "        } for domain in domains\n",
-    "    ]\n",
+    "                }\n",
+    "                for metric in metrics\n",
+    "                if metric[\"domain\"] == domain[\"id\"]\n",
+    "            ],\n",
+    "        }\n",
+    "        for domain in domains\n",
+    "    ],\n",
     "}"
    ]
   },
