remove duplicate treatments

--- a/scripts/client/toxref_hawc_migrations.ipynb
+++ b/scripts/client/toxref_hawc_migrations.ipynb
@@ -18,6 +18,7 @@
     "import os\n",
     "import re\n",
     "import string\n",
+    "from collections import defaultdict\n",
     "\n",
     "import django\n",
     "import pandas as pd\n",
@@ -310,8 +311,8 @@
     "            [m[1].lower() for m in study_cit_map],\n",
     "            scorer=lambda a, b, **kwargs: fuzz.ratio(a[:50], b[:50]),\n",
     "        )\n",
-    "        print(\"toxref citation: \", trimmed_citation)\n",
-    "        print(\"match: \", match, \" score: \", score, \" match_id: \", match_id)\n",
+    "        # print(\"toxref citation: \", trimmed_citation)\n",
+    "        # print(\"match: \", match, \" score: \", score, \" match_id: \", match_id)\n",
     "        if score >= 90:\n",
     "            hawc_id = study_cit_map[match_id][0]\n",
     "            study = await sync_to_async(Study.objects.get)(id=hawc_id)\n",
@@ -462,8 +463,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animalgroup_objects = []\n",
     "toxref_to_hawc_tg_map = {}\n",
+    "# toxref will have duplicate treatment groups (with differences that are irrelevant in hawc)\n",
+    "# we still need to identify them in order to create effects/etc. later\n",
+    "duplicate_tg_ids = defaultdict(list)\n",
+    "\n",
     "\n",
     "for type in STUDY_TYPES:\n",
     "    cur.execute(query, (type,))\n",
@@ -474,8 +478,33 @@
     "    df = pd.DataFrame(rows, columns=column_names)\n",
     "    df = df.loc[:, ~df.columns.duplicated()]\n",
     "\n",
+    "    # avoid duplicate treatment groups by using all columns except 'dose_period'\n",
+    "    tg_cols = [\n",
+    "        \"study_id\",\n",
+    "        \"sex\",\n",
+    "        \"generation\",\n",
+    "        \"dose_duration\",\n",
+    "        \"dose_duration_unit\",\n",
+    "        \"n\",\n",
+    "        \"tg_comment\",\n",
+    "    ]\n",
+    "    tg_df = df[[\"tg_id\", *tg_cols]]\n",
+    "\n",
+    "    # store duplicate treatment groups\n",
+    "    for _, group in tg_df.groupby(\n",
+    "        [\"study_id\", \"dose_duration\", \"dose_duration_unit\", \"n\", \"tg_comment\"], dropna=False\n",
+    "    ):\n",
+    "        tg_ids = group[\"tg_id\"].tolist()\n",
+    "        if len(tg_ids) >= 1:\n",
+    "            duplicate_tg_ids[tuple(tg_ids)] = tg_ids\n",
+    "\n",
     "    # filter unique treatment groups\n",
-    "    unique_tgs = df[\"tg_id\"].unique()\n",
+    "    unique_tg_df = tg_df.drop([\"sex\", \"generation\"], axis=1)\n",
+    "    unique_tg_df = unique_tg_df.drop_duplicates(\n",
+    "        subset=[col for col in unique_tg_df.columns if col != \"tg_id\"]\n",
+    "    ).reset_index(drop=True)\n",
+    "    unique_tgs = unique_tg_df[\"tg_id\"].unique()\n",
+    "\n",
     "    for tg_id in unique_tgs:\n",
     "        row = df[df[\"tg_id\"] == tg_id].iloc[0]\n",
     "        experiment_id = study_to_exp_map[row[\"study_id\"]]\n",
@@ -484,7 +513,6 @@
     "        if pd.isna(row[\"dose_duration\"]):\n",
     "            dose_duration = \"\"\n",
     "\n",
-    "        # TODO: ask preferred name. Ex: 13 Day Oral Tebupirimfos\n",
     "        exposure_duration_description = f\"{dose_duration} {row['dose_duration_unit']}\"\n",
     "        treatment_data = {\n",
     "            \"experiment\": experiment_id,\n",
@@ -496,7 +524,22 @@
     "            \"comments\": row[\"tg_comment\"] or \"\",\n",
     "        }\n",
     "        treatment = create_model_objects(treatment_url, [treatment_data])\n",
-    "        toxref_to_hawc_tg_map[tg_id] = treatment[0].json().get(\"id\")\n",
+    "\n",
+    "        # add all treatment ids to map\n",
+    "        for tg_id_tuple in duplicate_tg_ids.keys():\n",
+    "            if tg_id in tg_id_tuple:\n",
+    "                for id in tg_id_tuple:\n",
+    "                    toxref_to_hawc_tg_map[id] = treatment[0].json().get(\"id\")\n",
+    "\n",
+    "    # create animal groups for each treatment group\n",
+    "    unique_tg_effects = tg_df.drop_duplicates(\n",
+    "        subset=[col for col in tg_df.columns if col != \"tg_id\"]\n",
+    "    ).reset_index(drop=True)\n",
+    "    unique_tgs = unique_tg_effects[\"tg_id\"].unique()\n",
+    "\n",
+    "    for tg_id in unique_tgs:\n",
+    "        row = df[df[\"tg_id\"] == tg_id].iloc[0]\n",
+    "        experiment_id = study_to_exp_map[row[\"study_id\"]]\n",
     "\n",
     "        # create new animalgroup using tg and tg_effect\n",
     "        if pd.notna(row[\"tg_effect_id\"]):\n",
